Fix up long strings so they wrap (#3500)

--- a/src/amo/components/SearchResult/styles.scss
+++ b/src/amo/components/SearchResult/styles.scss
@@ -112,6 +112,7 @@
     margin: 0;
     max-width: 465px;
     width: 100%;
+    word-wrap: break-word;
   }
 }
 
